# corewar

./: .gitignore  CMakeLists.txt  Makefile  README.md  asm  author  bee_gees.s  bigzork.cor  bigzork.s  bolvan.cor  bolvan.s  dasm  test.s
assembler/: Makefile
assembler/incs/: asm.h  general.h
assembler/srcs/: assembler.c
assembler/srcs/srcs_asm/: analyzer.c  error.c  init.c  int_converters.c  lexer.c  s_utils.c  syntaxer.c  write_byte_code.c
assembler/srcs/srcs_dasm/: dasm_utilities.c  write_asm_file.c
champs/: ex_live.cor
dasm.dSYM/Contents/: Info.plist
dasm.dSYM/Contents/Resources/DWARF/: dasm
examples/: bigzork.s  fluttershy.cor  fluttershy.s
ft_printf/: Makefile
ft_printf/includes/: ft_ptintf.h  high_precision.h  my_float.h
ft_printf/srcs/: field_len.c  fill_union.c  ft_itoa_base_printf.c  ft_printf.c  get_binary.c  is_parser.c  is_typeflags.c  make_field.c  parsing_funcs.c  parsing_generaly.c  prepare_lennum.c  set_buff.c  set_flags.c  str_tolower.c  to_buff.c  which_sign.c  zeroing.c
ft_printf/srcsFloat/: check_create_float_res.c  e_flag_intf.c  float_intf.c  float_rounding.c  frees_for_float.c  ft_log10.c  ft_log2.c  g_flag_intf.c  get_dbl_values.c  get_ldbl_values.c  high_precision.c  high_precision_intf.c  high_precision_intf_long.c  high_precision_long.c  my_float.c  my_long_float.c  print_reserve_dbl.c
incs/: asm.h  d_asm.h  dasm.h  general.h  op.h
libft/: Makefile  ft_atol.c  ft_ceil.c  ft_floor.c  ft_itoa.c  ft_len_num.c  ft_pow.c  ft_reverse.c  ft_round.c  ft_strtrim.c  get_next_line.c  get_next_line.h  libft.h
libft/incs/: get_next_line.h  libft.h
libft/srcs/: ft_pf_float_module.c  ft_realloc.c
srcs/: DELETE_ME.c  asm_parser.c  assembler.c  dasm_parser.c  display_helper.c  init_parser.c  main.c  op.c  write_to_file.c
srcs/srcs_asm/: analyzer.c  asm.c  asm_utilities.c  asm_utils.c  calculate_distance.c  error.c  init.c  int_converters.c  is.c  lexer.c  lexer_utils.c  s_utils.c  skipers.c  syntaxer.c  syntaxer_straight.c  write_byte_code.c  write_cor_file.c
srcs/srcs_dasm/: check_exec_code.c  d_init.c  dasm_parser.c  dasm_utilities.c  get_arg.c  init_dasm_parser.c  write_s_file.c
srcs_asm/: analyzer.c  asm.c  asm_parser.c  asm_utilities.c  converters.c  error.c  handle_operations.c  helper.c  init.c  init_asm_parser.c  ins_parser.c  int_converters.c  label_parser.c  lexer.c  s_ins.c  s_lab_utils.c  s_labels.c  s_lex.c  s_lex_utils.c  s_ref_utils.c  s_utils.c  skipers.c  string_parser.c  syntaxer.c  syntaxer_straight.c  syntaxer_tree.c
srcs_dasm/: dasm.c  dasm_parser.c  helper.c  init_dasm_parser.c  write_to_file.c
tests/: asm
tests/error/: four_arg_malloc_free_pointer_error.s  header_double_comments.s
tmp/: .fluttershy.s.swp  bee_gees.cor  bee_gees.s  fluttershy.s  fluttershy_re.s  zork.cor  zork.s  zzork.cor  zzork.s
virtual_machine/: Makefile
virtual_machine/include/: corewar.h  op.h  sdl_struct.h  sound.h  visual.h
virtual_machine/include/SDL2/: SDL_config.h
virtual_machine/lib/: libSDL2-2.0.0.dylib  libSDL2.la  libSDL2_mixer-2.0.0.dylib  libSDL2_mixer.la  libSDL2_test.la  libSDL2_ttf-2.0.0.dylib  libSDL2_ttf.la  libSDL2main.la  libfreetype.6.dylib  libfreetype.la  libmad.0.2.1.dylib  libmad.la
virtual_machine/lib/cmake/SDL2/: sdl2-config.cmake
virtual_machine/lib/pkgconfig/: SDL2_mixer.pc  SDL2_ttf.pc  freetype2.pc  sdl2.pc
virtual_machine/src/: announce_winner.c  draw_annotations.c  draw_byte.c  draw_game_controls.c  draw_shapes.c  error_message.c  event_handler.c  explosion.c  free_resources.c  get_and_set.c  gladiatorial_fight.c  help.c  init_sdl.c  initialize_visual_arena.c  int_to_char.c  live_ld_st_add.c  lld_lldi_lfork_aff.c  main.c  print_arena.c  processes.c  read.c  render_text.c  reverse.c  set_replica.c  show.c  show_data.c  sub_and_or_xor.c  update_byte.c  write_read_card.c  zjmp_ldi_sti_fork.c
vm/includes/: vm.h
vm/srcs/: main.c
vm/srcs/struct_intf/: corewar_intf.c
vm/srcs/validation/: parse_input_intf.c  parse_inputs.c  reports.c
vm_champs/: bee_gees.s
vm_champs/brazhnik/ft_printf/: Makefile
vm_champs/brazhnik/ft_printf/includes/: ft_printf.h  ft_printf_lib.h
vm_champs/brazhnik/ft_printf/sources/: ft_dprintf.c  ft_printf.c  ft_vdprintf.c  ft_vprintf.c  handle_b.c  handle_c.c  handle_d.c  handle_inv_type.c  handle_n.c  handle_o.c  handle_p.c  handle_percent.c  handle_s.c  handle_type.c  handle_u.c  handle_wc.c  handle_ws.c  handle_x.c  parse.c  parse_placeholder.c  part.c  strcat_ptr.c  strcatunbr_ptr.c  strcatwchar_ptr.c  strncat_ptr.c  utils.c
