cmake_minimum_required(VERSION 3.14)
project(corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(incs)
include_directories(libft/incs)

add_executable(corewar
        incs/dasm.h
        incs/op.h
        libft/incs/ft_printf.h
        libft/incs/get_next_line.h
        libft/incs/libft.h
        libft/srcs/ft_allocate_mx.c
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_itoa_base.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstfree.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstlen.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_lstpushback.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_nblen.c
        libft/srcs/ft_new_array.c
        libft/srcs/ft_new_ptr_array.c
        libft/srcs/ft_pf_bin_to_int.c
        libft/srcs/ft_pf_bonuses_1.c
        libft/srcs/ft_pf_csp_module.c
        libft/srcs/ft_pf_dnum_utilities.c
        libft/srcs/ft_pf_expand_argument.c
        libft/srcs/ft_pf_float_module.c
        libft/srcs/ft_pf_num_utilities.c
        libft/srcs/ft_pf_place_num.c
        libft/srcs/ft_pf_process_utilities.c
        libft/srcs/ft_pf_processings.c
        libft/srcs/ft_pow.c
        libft/srcs/ft_print_array.c
        libft/srcs/ft_printf.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_realloc.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strjoin_free.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strndup.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnlen.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strrev.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_swap_int.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/ft_vectors.c
        libft/srcs/ft_vfprintf.c
        libft/srcs/get_next_line.c
        srcs/srcs_dasm/dasm_parser.c
        srcs/srcs_dasm/dasm_utilities.c
        srcs/srcs_dasm/init_dasm_parser.c
        srcs/srcs_dasm/write_s_file.c
#        srcs_dasm/dasm.c
        incs/asm.h
        srcs/srcs_asm/asm.c
        srcs/srcs_asm/asm_utilities.c
        srcs/srcs_asm/skipers.c srcs/srcs_asm/error.c srcs/srcs_asm/init.c srcs/srcs_asm/lexer.c srcs/srcs_asm/int_converters.c incs/general.h srcs/srcs_asm/syntaxer_straight.c srcs/srcs_asm/syntaxer.c srcs/srcs_asm/s_utils.c srcs/srcs_asm/analyzer.c srcs/srcs_asm/write_byte_code.c srcs/srcs_asm/write_cor_file.c srcs/assembler.c)
