cmake_minimum_required(VERSION 3.15)
project(CoreWar_Hub C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_printf/includes)
include_directories(libft)
include_directories(vm/includes)

add_executable(CoreWar_Hub
        ft_printf/includes/ft_ptintf.h
        ft_printf/includes/high_precision.h
        ft_printf/includes/my_float.h
        ft_printf/srcs/field_len.c
        ft_printf/srcs/fill_union.c
        ft_printf/srcs/ft_itoa_base_printf.c
        ft_printf/srcs/ft_printf.c
        ft_printf/srcs/get_binary.c
        ft_printf/srcs/is_parser.c
        ft_printf/srcs/is_typeflags.c
        ft_printf/srcs/make_field.c
        ft_printf/srcs/parsing_funcs.c
        ft_printf/srcs/parsing_generaly.c
        ft_printf/srcs/prepare_lennum.c
        ft_printf/srcs/set_buff.c
        ft_printf/srcs/set_flags.c
        ft_printf/srcs/str_tolower.c
        ft_printf/srcs/to_buff.c
        ft_printf/srcs/which_sign.c
        ft_printf/srcs/zeroing.c
        ft_printf/srcsFloat/check_create_float_res.c
        ft_printf/srcsFloat/e_flag_intf.c
        ft_printf/srcsFloat/float_intf.c
        ft_printf/srcsFloat/float_rounding.c
        ft_printf/srcsFloat/frees_for_float.c
        ft_printf/srcsFloat/ft_log10.c
        ft_printf/srcsFloat/ft_log2.c
        ft_printf/srcsFloat/g_flag_intf.c
        ft_printf/srcsFloat/get_dbl_values.c
        ft_printf/srcsFloat/get_ldbl_values.c
        ft_printf/srcsFloat/high_precision.c
        ft_printf/srcsFloat/high_precision_intf.c
        ft_printf/srcsFloat/high_precision_intf_long.c
        ft_printf/srcsFloat/high_precision_long.c
        ft_printf/srcsFloat/my_float.c
        ft_printf/srcsFloat/my_long_float.c
        ft_printf/srcsFloat/print_reserve_dbl.c
        libft/ft_atoi.c
        libft/ft_atol.c
        libft/ft_bzero.c
        libft/ft_ceil.c
        libft/ft_fib.c
        libft/ft_floor.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_islower.c
        libft/ft_isprint.c
        libft/ft_isupper.c
        libft/ft_itoa.c
        libft/ft_len_num.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstpush.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_reverse.c
        libft/ft_round.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/libft.h vm/srcs/main.c vm/srcs/validation/reports.c vm/includes/vm.h vm/srcs/validation/parse_inputs.c vm/srcs/validation/parse_input_intf.c vm/srcs/struct_intf/corewar_intf.c)
